# drone-delivery

./: .gitignore  README.md  categories.txt  imageclassifier.py  main.py  utils.py  videosource.py
flight/: commands.txt
flight/aruco_hunter/: CMakeLists.txt  README.md  package.xml
flight/aruco_msgs/: CMakeLists.txt  README.md  package.xml
flight/edra_msgs/: CMakeLists.txt  package.xml
flight/edra_msgs/msg/: ArucoDetection.msg
flight/sim00/: CMakeLists.txt  package.xml
flight/sim01/: CMakeLists.txt  package.xml
flight/sim02/: CMakeLists.txt  package.xml
flight/sim03/: CMakeLists.txt  package.xml
rpi4/: README.md  main.py  videosource.py
rpi4/vision/: README.md  arucodetector.py  main.py  msgs.py  requirements.txt  requirements_gazebo.txt  ros_bridge.py  rosbridge.py  topics.py  utils.py  videosource.py  videowebstreaming.py
scripts/: connect2vpn.sh  gazebo_simulation.txt  how_to_run.md  install_mavros.md  noetic-ros_comm-wet.rosinstall  package_delivery_flight_planning.py  px4_gazebo_mavros_simulation.txt  raspberry_config.txt  raspberry_setup.md  simulate.md  test_serial_loopback.py
scripts/rpi-image-utils/: README.md
scripts/test_mavros_rpi_install/: README.md
vision/: README.md  arucodetector.py  bridgeros.py  bridgezmq.py  gazebovideosource.py  main.py  msgs.py  pivideosource.py  requirements.txt  requirements_raspberry.txt  rosbridge.py  topics.py  utils.py  videosaver.py  videosource.py  videosourcegazebo.py  videosourcekafka.py  videosourcepi.py  videosourcezmq.py  videostreaming.py  videostreamingapp.py  videostreamingzmq.py  videowebstreaming.py
(+17 files in other folders)
