<?xml version="1.0"?>
<package format="2">
  <name>edra_msgs</name>
  <version>0.0.0</version>
  <description>The edra_msgs package</description>

  <!-- <maintainer email="edra_msgs@todo.todo"></maintainer> -->
  <!-- <url type="website">http://wiki.ros.org/edra_msgs</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <!-- <author email="john.doe@example.com">John Doe</author> -->

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
